<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <Button
                android:id="@+id/siete"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/siete"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cuatro"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/cuatro"
                android:layout_weight="1" />

            <Button
                android:id="@+id/uno"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/uno"
                android:layout_weight="1" />

            <Button
                android:id="@+id/punto"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/punto"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <Button
                android:id="@+id/ocho"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/ocho"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cinco"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/cinco"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/dos"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cero"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/cero"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <Button
                android:id="@+id/nueve"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/nueve"
                android:layout_weight="1" />

            <Button
                android:id="@+id/seis"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/seis"
                android:layout_weight="1" />

            <Button
                android:id="@+id/tres"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/tres"
                android:layout_weight="1" />

            <Button
                android:id="@+id/igual"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/igual"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <Button
                android:id="@+id/entre"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/entre"
                android:layout_weight="1" />

            <Button
                android:id="@+id/por"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/por"
                android:layout_weight="1" />

            <Button
                android:id="@+id/menos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/menos"
                android:layout_weight="1" />

            <Button
                android:id="@+id/mas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/mas"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
