<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <Button
                android:id="@+id/porciento"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/porciento"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cuadrado"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/cuadrado"
                android:layout_weight="1" />

            <Button
                android:id="@+id/raiz"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/raiz"
                android:layout_weight="1" />

            <Button
                android:id="@+id/modulo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/modulo"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
